@@ -39,6 +39,7 @@ Maintenance
 * Orthanc starts even if jobs from a previous execution cannot be unserialized
 * New CMake option "ENABLE_DCMTK_LOG" to disable logging internal to DCMTK
 * Fix issue 114 (Boost 1.68 doesn't support SHA-1 anymore)
+* Support of "JobsHistorySize" set to zero
 * Upgraded dependencies for static and Windows builds:
   - boost 1.68.0
   - lua 5.3.5
